--- a/flexbox.html
+++ b/flexbox.html
@@ -3,6 +3,12 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;1,400&display=swap"
+            rel="stylesheet"
+        />
         <title>Document</title>
         <link rel="stylesheet" href="style.css" />
     </head>
@@ -46,10 +52,12 @@
             <div class="column-item main-column">
                 <h2>main</h2>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Quisquam, accusantium quaerat dicta, corporis quibusdam
-                    tempora voluptatem distinctio quidem soluta amet voluptatum.
-                    Amet, voluptate eum? Aliquam velit earum pariatur ipsa odit.
+                    Kênh Youtube của Công ty Cổ phần Nội dung thể thao Việt -
+                    Cập nhật tin tức thể thao bóng đá mới nhất 24h qua. Tổng hợp
+                    các sự kiện NÓNG hổi của thể thao trong nước và quốc tế
+                    nhanh chính xác nhất. Tin HOT các môn thể thao: Võ thuật,
+                    điền kinh, bóng rổ, bóng đá, bóng chuyền, Tennis, đua xe,
+                    Golf...diễn ra trong ngày.
                 </p>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
