--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
         <script src="index.js"></script>
+        <link rel="stylesheet" href="style.css" />
     </head>
-    <body></body>
+    <body>
+        <div class="dropdown">
+            <div class="dropdown__select">
+                <span class="dropdown__selected">Menu Dropdown</span>
+            </div>
+            <div class="dropdown__content">
+                <div class="item">Item 1</div>
+                <div class="item">Item 2</div>
+                <div class="item">Item 3</div>
+                <div class="item">Item 4</div>
+            </div>
+        </div>
+    </body>
 </html>
